# me461_slam

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  command.py  config.json  dbscan.hpp  dump.py  dump_serial.py  explore_planner.py  global_planner.py  intrinsics.py  known_README  map_info.json  monoslam.cpp  monoslam.h  optimize.hpp  plan.py  plan_move.py  plot_packed.py  post_target.py  restart_server.bash  serial_dev.c  serial_dev.h  serial_main.c  slam.cpp  test.cpp  utils.hpp  webcam.txt  webserver.cpp
calibration/: CMakeLists.txt  capture_calibration.py  correct.py  distance_guess.py  echo_pose.cpp  intrinsics.json  undistort.cpp  undistort_vid.py
calibration/cpp_log/: pose_000000.json  pose_000001.json  pose_000002.json  pose_000003.json  pose_000004.json  pose_000005.json  pose_000006.json  pose_000007.json  pose_000008.json  pose_000009.json  pose_000010.json  pose_000011.json  pose_000012.json  pose_000013.json  pose_000014.json  pose_000015.json  pose_000016.json  pose_000017.json  pose_000018.json  pose_000019.json  pose_000020.json  pose_000021.json  pose_000022.json  pose_000023.json  pose_000024.json  pose_000025.json  pose_000026.json  pose_000027.json  pose_000028.json  pose_000029.json  pose_000030.json  pose_000031.json  pose_000032.json  pose_000033.json  pose_000034.json  pose_000035.json  pose_000036.json  pose_000037.json  pose_000038.json  pose_000039.json  (+1960 more)
calibration/drive_in_box/: pose_000000.json  pose_000001.json  pose_000002.json  pose_000003.json  pose_000004.json  pose_000005.json  pose_000006.json  pose_000007.json  pose_000008.json  pose_000009.json  pose_000010.json  pose_000011.json  pose_000012.json  pose_000013.json  pose_000014.json  pose_000015.json  pose_000016.json  pose_000017.json  pose_000018.json  pose_000019.json  pose_000020.json  pose_000021.json  pose_000022.json  pose_000023.json  pose_000024.json  pose_000025.json  pose_000026.json  pose_000027.json  pose_000028.json  pose_000029.json  pose_000030.json  pose_000031.json  pose_000032.json  pose_000033.json  pose_000034.json  pose_000035.json  pose_000036.json  pose_000037.json  pose_000038.json  pose_000039.json  (+681 more)
calibration/old_captures/: pose_000000.json  pose_000002.json  pose_000003.json  pose_000005.json  pose_000006.json  pose_000007.json  pose_000008.json  pose_000009.json  pose_000014.json  pose_000021.json  pose_000022.json  pose_000024.json  pose_000027.json  pose_000028.json  pose_000029.json  pose_000030.json  pose_000031.json  pose_000032.json  pose_000033.json  pose_000034.json  pose_000035.json  pose_000036.json  pose_000038.json  pose_000039.json  pose_000040.json  pose_000041.json  pose_000042.json  pose_000043.json  pose_000046.json  pose_000048.json  pose_000049.json  pose_000050.json  pose_000054.json  pose_000055.json  pose_000056.json  pose_000058.json  pose_000060.json  pose_000062.json  pose_000064.json  pose_000066.json  (+305 more)
calibration/turn_in_place/: pose_000506.json
client/: bt_client.py
motion/: image_cspace.py  purepursuit.py  simple_motions.py
object_detection/: detect.py
slam_cpp/: CMakeLists.txt  config.json  dbscan.cpp  dbscan.h  fast_alloc.cpp  fast_alloc.h  fast_alloc.hpp  headers.hpp  optimize.hpp  slam.cpp  slam_config.json  types.h  utils.hpp
utils/: command.py  plot_packed.py  read_mat.py  test.cpp  usb_info.bash
web/: electron.html  electron.js  index.html  main.js  package.json  view.html
web/include/: README  joy_min.js
webserver/: bt_client.py  bt_server.py  serial_dev.c  serial_dev.cpp  serial_dev.h  webserver.cpp
