cmake_minimum_required(VERSION 3.0)

project( undistort_cpp )
find_package( OpenCV REQUIRED )
#find_package(nlohmann_json 3.2.0 REQUIRED)
find_package( Boost COMPONENTS system thread REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( undistort undistort.cpp )
target_link_libraries( undistort ${OpenCV_LIBS} ${Boost_LIBRARIES} )

project( echo_pose )
find_package( Threads REQUIRED )
find_library( atomic-lib NAMES libatomic.so libatomic.so.1 )
find_package( Boost COMPONENTS system thread filesystem REQUIRED )
add_executable( echo_pose echo_pose.cpp )
target_link_libraries( echo_pose ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} ${atomic-lib} )
